--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -173,6 +173,12 @@ body{
     font-size: 20px;
 }
 
+.innerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .intro-Topic{
     font-size: 24px;
     font-weight: bold;
@@ -190,6 +196,12 @@ body{
     width: 600px;
     padding: 20px;
     box-shadow: 0 2px 2px 3px rgb(0, 0, 0,0.1);
+}
+
+.inputFields{
+    border-color: black ;
+    width: auto;
+    height: 100px;
 }
 
 .other-category-container{
@@ -322,6 +334,18 @@ body{
     font-size: 20px;
     font-weight: bold;
     padding: 20px;
+}
+
+textarea{
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 32px;
+    border-radius: 4px;
+    width: 100%;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    border: 1px solid #c5c6c9;
 }
 
 .wrap{
@@ -465,3 +489,7 @@ a{
     font-size: 16px;
     border-radius:15px ;
 }
+/**/
+
+
+/* Edit profile Styles */
