--- a/public/assests/css/helpCenter.styles.css
+++ b/public/assests/css/helpCenter.styles.css
@@ -13,9 +13,15 @@ body{
     color:#4b4b4b;
     font-size: 20px;
 }
-.container{
+.helpCenterContainer, .buyerHelpContainer{
     padding: 16px 32px;
     border: none !important;
+}
+
+.buyerHelpContainer .container{
+    margin-right: 32px;
+    margin-left: 32px;
+    padding: 0px 16px;
 }
 
 /*help center header*/
@@ -43,12 +49,12 @@ body{
 }
 
 /*left container*/
-a{
+.helpCenterContent a{
     text-decoration: none;
 }
 
 /* for seller buyer chose buttons */
-.btn{
+.helpCenterContent .btn{
     padding: 32px;
     box-shadow:1px 1px 10px #888888; /*apply a shadow*/
     text-align: center;
@@ -58,21 +64,21 @@ a{
 }
 
 /* when button is hover by mouse pointer */
-.btn:hover{
+.helpCenterContent .btn:hover{
     transform:scale(1.04) translateY(-5px);
     transition : 0.2s; /*animation time*/
 }
-.btn-group-1{
+.helpCenterContent .btn-group-1{
     display: flex;/*make button side by side */
 }
-.btn-title{
+.helpCenterContent .btn-title{
     color: black;
     font-size: large;
     margin-top: 10px;
 }
 
 /* for morabout buttons */
-.btn2{
+.helpCenterContent .btn2{
     padding: 15px 25px; /*height width*/
     background-color: #f0f0f0;
     text-align: center;
@@ -84,7 +90,7 @@ a{
 
 
 /* for recommanded buttons */
-.btn3{
+.helpCenterContent .btn3{
     color: black;
     padding: 16px;
     margin-bottom: 8px;
@@ -93,7 +99,7 @@ a{
     transition : 0.3s;/*animation time*/
 }
 /* when button is hover by mouse pointer */
-.btn3:hover{
+.helpCenterContent .btn3:hover{
     transition : 0.3s; /*animation time*/
     background-color: #404145;
     color: #ffffff;
@@ -108,7 +114,7 @@ a{
     margin-bottom: 5px;
 }
 
-li{
+.buyerHelpContainer li, .helpCenterContent li{
     font-size: 17px;
     color: #333;
 }
@@ -132,6 +138,17 @@ li{
 
 /*****************************************************/
 /*********** Seller/Buyer Help *********************/
+
+.buyerHelpHeader, .sellerHelpHeader{
+    min-height: 24px;
+    margin-top: 24px;
+    margin-bottom: 48px;
+    font-size: 32px;
+    font-weight: 700;
+    color: #222325;
+    line-height: 140%;
+    padding: 0 32px;
+}
 
 /* for recommanded buttons */
 .btn4
