--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -1,379 +1,3 @@
-/* body{
-    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
-    margin: 0;
-    padding: 0;
-} */
-
-/* .card{
-    width: calc(100% / 5 - 10px);
-    background-color:#32bd6e;
-    transition: transform 0.5s ease, background-color 0.4s ease;
-}
-
-.card:hover{
-    transform : translateY(-15px);
-    background-color:#32bd6e;
-}
-
-.card img{
-    width: 100%;
-    min-height: 250px;
-    object-fit: cover;
-    margin-bottom: 10px;
-}
-.card-container{
-    font-family: sans-serif;
-    box-sizing:inherit;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 12px;
-    margin: 16px;
-}
-
-.card-content{
-    font-size: 18px;
-    padding: 12px;
-    color: #fff;
-}
-
-.card-content p{
-    font-size: 15px;
-    margin-bottom: 15px;
-}
-
-.card-content a{
-    text-decoration: none;
-    font-size: 16px;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #fff;
-    color: #32bd6e;
-    margin-bottom: 10px;
-}
-
-.card-content h2{
-    font-size: 25px;
-    margin-bottom: 10px;
-}
-
-.container {
-    background-color: #f7f7f7;
-    border: 1px solid #c5c6c9;
-    padding-bottom: 32px;
-    height: 100%;
-}
-
-.profile-container{
-
-    background-color: #fff;
-    margin: 32px;
-    box-sizing: border-box;
-    border: 1px solid #c5c6c9;
-    border-radius: 15px;
-    box-sizing: border-box;
-    padding: 8px;
-    box-shadow: 0 2px 2px 3px rgba(0, 0, 0, 0.1);
-}
-
-.profile-header{
-    padding: 16px;
-}
-
-.seller{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    border: 1px solid #c5c6c9;
-    padding: 16px;
-    border-radius:15px ;
-}
-
-@media only screen and(min-width:600px) {
-    .seller{
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-.img-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #fff;
-    border-radius: 5px;
-    max-width: 1240px;
-    padding: 20px;
-    box-shadow: 0 2px 2px 3px rgba(0, 0, 0, 0.1);
-}
-
-.img{
-    display: flex;
-    justify-content: flex-start;
-    padding: 2px;
-}
-
-.icons-content{
-    /* display: flex;
-    padding: 2px;
-    flex-direction: column;
-    margin: 7px;
-}
-
-.icon-name{
-    font-size: 30px;
-    font-weight: bold;
-    margin: 7px;
-    padding: 2px;
-    padding-left: 10px;
-}
-
-.icon-location{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 7px;
-}
-
-.icon{
-    width: 20px;
-    height: 20px;
-    padding: 10px;
-}
-
-.icon-location-value{
-    font-size: 20px;
-}
-
-.icon-time{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 7px;
-    font-size: 18px;
-}
-
-.time{
-    margin: 7px;
-}
-
-.buttons{
-    padding: 15px;
-}
-
-a{
-    text-decoration: none;
-    color: inherit;
-    display: inline-block;
-}
-
-#button{
-    /* display: flex;
-    justify-content:end;
-    align-items: end;
-    background-color:#32bd6e;
-    color: white;
-    border: 0;
-    border-radius: 15px;
-    padding: 10px;
-    margin: 5px;
-}
-
-#button:hover{
-    cursor: pointer;
-}
-
-.profile-content{
-    font-family: sans-serif;
-    box-sizing:inherit;
-    display: flex;
-    justify-content:space-evenly; 
-    margin-top: 8px;
-    border: 1px solid #c5c6c9;
-    margin: 16px;
-    border-radius:15px ;
-    
-}
-
-.profile-content1{
-    border-right: 1px solid #c5c6c9;
-    width: 50%;
-    min-height: 500px;
-    height: auto;
-}
-
-.content-category1{
-
-}
-
-.profile-content-category-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.Topics{
-    font-size: 20px;
-    font-weight: bold;
-    padding: 20px;
-}
-
-.profile-content-category-content{
-    padding: 16px;
-    border-bottom: 1px solid #c5c6c9;
-
-}
-
-.profile-content2{
-    width: 50%;
-    min-height: 500px;
-    height: auto;
-    text-align: justify;
-}
-
-.content-category2{
-
-}
-
-.other-category-container{
-    background-color: #fff;
-    margin: 32px;
-    box-sizing: border-box;
-    border: 1px solid #c5c6c9;
-    border-radius: 15px;
-    box-sizing: border-box;
-    padding: 16px;
-    box-shadow: 0 2px 2px 3px rgba(0, 0, 0, 0.1);
-}
-
-#gigs{
-
-}
-
-.other-category-header{
-    display: flex;
-    justify-content: space-between;
-    margin: 0 16px;
-    width: auto;
-    height: auto;
-    border-bottom: #c5c6c9 1px solid;
-}
-
-.plus{
-
-}
-
-#plus{
-    justify-content:end;
-    align-items: end;
-    background-color:#32bd6e;
-    color: white;
-    border: 0;
-    border-radius: 15px;
-    padding: 10px;
-    margin: 5px;
-    font-size: 15px;
-}
-
-#plus:hover{
-    cursor: pointer;
-}
-
-.close-delete-modal-button{
-
-}
-
-
-.editModal{
-    
-}
-
-#editModal{
-}
-
-.editModal::backdrop{
-    background: linear-gradient(45deg,#fff,#97a442)!important;
-}
-
-.open-edit-modal-button{
-    padding: 10px 20px;
-    background-color: #fff;
-    color: #32bd6e;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.close-edit-modal-button{
-
-}
-
-
-.viewModal{
-      
-}
-
-#viewModal{
-
-}
-
-.open-view-modal-button{
-    padding: 10px 20px;
-    background-color: #fff;
-    color: #32bd6e;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.close-view-modal-button{
-    margin-top: 15px;
-    padding: 10px 15px;
-    background-color: #32bd6e;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-
-.Modal{
-    padding: 1em;
-    min-width: 50ch;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 300px;
-    background-color: white;
-    padding: 20px;
-    border: 0;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-
-    & > *{
-        margin: 0 0 0.5rem 0;
-    } 
-}
-
-.Modal::backdrop{
-    background: linear-gradient(90deg,#fff,#32bd6e);
-    opacity: .9;
-} */
-
-/* */
-
-
-
-
-
-
-
-
-
-
-
-
 body{
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
     margin: 0;
@@ -382,7 +6,7 @@ body{
 }
 
 /* Main Container */
-.buyerProfileContainer{
+.sellerProfileContainer{
     height: 100%;
     width: 100%;
     padding: 16px 32px;
@@ -493,7 +117,7 @@ body{
     font-weight: 600;
 }
 
-.buyerProfileHeader{
+.sellerProfileHeader{
     min-height: 24px;
     margin-top: 24px;
     margin-bottom: 48px;
@@ -685,13 +309,13 @@ input[type = "text"], textarea, select{
     text-align: justify;
 }
 /*user contribution*/
-.buyerProfileContainer .sub-container .user-contribution{
+.sellerProfileContainer .sub-container .sellerUser-contribution{
     margin-bottom: 32px;
     width: 70%;
 }
 
-/*user-content-header*/
-.buyerProfileContainer .sub-container .user-contribution .user-content .header{
+/* Seller User-content-header */
+.buyerProfileContainer .sub-container .sellerUser-contribution .sellerUser-content .sellerheader{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -707,13 +331,13 @@ input[type = "text"], textarea, select{
     font-weight: 600;
     cursor: pointer;
 }
-.buyerProfileContainer .sub-container .user-contribution .user-content .header span:hover{
+.buyerProfileContainer .sub-container .sellerUser-contribution .sellerUser-content .sellerheader span:hover{
     text-decoration: underline;
     border-bottom: 4px solid #1dbf73;
     padding-bottom: 2px;
     text-decoration: none;
 }
-.buyerProfileContainer .sub-container .user-contribution .user-content .header button{
+.buyerProfileContainer .sub-container .sellerUser-contribution .sellerUser-content .sellerheader button{
     color: #0e0e0f;
     border: 2px solid #fff;
     padding: 8px;
@@ -722,14 +346,14 @@ input[type = "text"], textarea, select{
     font-size: 14px;
     transition: ease-in-out 0.3s;
 }
-.buyerProfileContainer .sub-container .user-contribution .user-content .header button:hover{
+.buyerProfileContainer .sub-container .sellerUser-contribution .sellerUser-content .sellerheader button:hover{
     color: #fff;
     border: 2px solid #fff;
     background: #1dbf73;
 }
 
-/*user-content-content*/
-.buyerProfileContainer .sub-container .user-contribution .content{
+/* Seller User-content-content */
+.buyerProfileContainer .sub-container .sellerUser-contribution .Gig-content{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -740,7 +364,7 @@ input[type = "text"], textarea, select{
 
 
 /*reviews*/
-.buyerProfileContainer .sub-container .user-contribution .reviews{
+.buyerProfileContainer .sub-container .sellerUser-contribution .reviews{
     width: 100%;
     position: relative;
     background-color: #fff;
@@ -750,7 +374,7 @@ input[type = "text"], textarea, select{
 }
 
 /*reviews-header*/
-.buyerProfileContainer .sub-container .user-contribution .reviews .header{
+.buyerProfileContainer .sub-container .sellerUser-contribution .reviews .sellerheader{
     width: 100%;
     color: #0e0e0f;
     background-color: #fff;
@@ -792,7 +416,7 @@ input[type = "text"], textarea, select{
     .sub-container .profile-container{
         width: 100%;
     }
-    .buyerProfileContainer .sub-container .user-contribution{
+    .buyerProfileContainer .sub-container .sellerUser-contribution{
         width: 100%;
     }
     .job-card .job-data-basic{
@@ -818,7 +442,7 @@ input[type = "text"], textarea, select{
     .sub-container .profile-container{
         width: 100%;
     }
-    .buyerProfileContainer .sub-container .user-contribution{
+    .buyerProfileContainer .sub-container .sellerUser-contribution{
         width: 100%;
     }
 }
