--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -46,9 +46,8 @@ body{
     background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-
 }
-#overlay, #milestoneOverlay{
+#overlay{
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
@@ -57,13 +56,13 @@ body{
 @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
-  }
+}
   
   @keyframes animatetop {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
 }
-#packageModal {
+#modal {
     display: none;
     position: absolute;
     background: #fff;
@@ -71,17 +70,6 @@ body{
     border-radius: 8px;
     width: auto;
     height: auto;
-}
-#milestoneModal{
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    position: absolute;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 50%;
-    height: 600px;
 }
 .confirmation{
     display: none;
