--- a/public/assests/css/HelpDeskCenter.styles.css
+++ b/public/assests/css/HelpDeskCenter.styles.css
@@ -1,119 +1,259 @@
-/*home content*/
 
-.buyerDashboardContent{
-    padding: 16px 0px;
-    background-color: #f7f7f7 !important;
+.title
+{
+    color:#007bff;
+    font-size: 30px;
+}
+.dark-title
+{
+    color:#4b4b4b;
+    font-size: 20px;
+}
+.container
+{
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
-/*Header*/
-.buyerDashboardContent .personalizedHeader{
+
+/* for seller buyer chose buttons */
+.btn
+{
+    padding: 20px;
+    box-shadow:1px 1px 10px #888888; /*apply a shadow*/
+    height: 200px;
+    width:200px;
+    text-align: center;
+    margin-right:50px;
+    border-radius: 7px;
+    transition : 0.8s;/*animation time*/
+}
+/* when button is hover by mouse pointer */
+.btn:hover{
+    transform:scale(1.04) translateY(-5px);
+    transition : 0.2s; /*animation time*/
+}
+
+.btn-group
+{
+    display: flex;/*make button side by side */
+}
+.btn-title
+{
+    color: black;
+    font-size: large;
+    margin-top: 10px;
+}
+
+/* for morabout buttons */
+.btn2
+{
+    padding: 15px 25px; /*height width*/
+    background-color: #f0f0f0;
+    text-align: center;
+    color:black;
+    margin-right:30px;
+    border-radius: 50px;
+    transition : 0.7s;/*animation time*/
+}
+/* when button is hover by mouse pointer */
+.btn2:hover{
+    background-color: #007bff;
+    color: white;
+}
+
+/* for recommanded buttons */
+.btn3
+{
+    padding: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    min-height: 24px;
-    margin-top: 24px;
-    margin-bottom: 48px;
-    font-size: 32px;
-    font-weight: 700;
-    color: #222325;
-    line-height: 140%;
-    padding: 0 32px;
+    box-shadow:1px 1px 10px #888888; /*apply a shadow*/
+    height: 150px;
+    width:170px;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    font-weight: 550;
+    margin-right:50px;
+    border-radius: 7px;
+    transition : 0.8s;/*animation time*/
+}
+/* when button is hover by mouse pointer */
+.btn3:hover{
+    transform:scale(1.01) translateY(-2px);
+    transition : 0.2s; /*animation time*/
+    background-color: white;
+    color:#007bff;
 }
 
-/*search bar*/
-.buyerDashboardContent .searchBar{
-    width: 25%;
+/*****************************************************/
+/*********** Advertisement Help *********************/
+
+.sub-title
+{
+    color:#007bff;
+    font-size: 18px;
+    margin-bottom: 5px;
 }
-.buyerDashboardContent .searchBar form{
-    display: flex;
-    width: 100%;
-}
-.buyerDashboardContent .searchBar input[type=text] {
-    display: block;
-    text-align: left;
-    width: 100%;
-    border: 1px solid #c5c6c9;
-    border-radius: 16px 0 0 16px;
-    border-right: 0;
-}
-.buyerDashboardContent .searchBar button {
-    display: block;
-    text-align: left;
-    margin: 0;
-    padding: 8px;
-    cursor: pointer;
-    border: 1px solid #c5c6c9;
-    border-radius: 0 16px 16px 0;
-    background-color: #000000;
-    color: #fff;
-    transition: ease-in-out 0.3s;
-}
-.buyerDashboardContent .searchBar button:hover {
+
+li{
+    font-size: 17px;
     color: #333;
-    background: #fff;
+}
+.subans
+{
+    margin-left: 50px;
+}
+.backbtn
+{
+    text-align: center;
+    padding: 12px 20px;
+    border-radius: 7px;
+    background-color: #007bff;
+    width: 200px;
+    font-size:15px;
+    margin-right: 20px;
 }
 
-/*Main Container*/
-.buyerDashboardContent .mainContent{
-    margin: 0 32px;
-}
-.buyerDashboardContent #content{
-    padding: 16px;
-    margin-top: 32px;
-    margin-bottom: 64px;
-    background-color: #fff;
-    border-radius: 8px;
-}
-.buyerDashboardContent .row{
+
+/*****************************************************/
+/*********** Seller/Buyer Help *********************/
+
+/* for recommanded buttons */
+.btn4
+{
+    padding: 20px;
     display: flex;
-    justify-content: space-between;
-}
-.buyerDashboardContent .row .leftSide{
-    display: flex;
+    justify-content: center;
     align-items: center;
+    box-shadow:1px 1px 10px #888888; /*apply a shadow*/
+    height: 150px;
+    width:170px;
+    
+    text-align: center;
+    font-weight: 550;
+    margin-right:50px;
+    border-radius: 7px;
+    transition : 0.8s;/*animation time*/
+    background-color: white;
+    color:#007bff;
 }
-.buyerDashboardContent svg{
-    height: 32px;
-    width: 32px;
-    padding: 2px;
-    background-color: #000000;
-    color: #fff;
-    border: 1px solid black;
-    border-radius: 100%;
+/* when button is hover by mouse pointer */
+.btn4:hover{
+    transform:scale(1.01) translateY(-2px);
+    transition : 0.2s; /*animation time*/
+    background-color: #007bff;
+    color: white;
+}
+.btncontainer
+{
+    display: flex;
+}
+.createbtn
+{
+    padding: 9px 20px;
+    text-align: center;
+    border-radius: 7px;
+    background-color: #36aa00;
+    width: 175px;
+    font-size:15px;
+    margin-right: 20px;
     transition: ease-in-out 0.3s;
 }
-.buyerDashboardContent svg:hover{
-    background-color:  #fff;
+.createbtn:hover
+{
+    background-color: #f0f0f0;
+    color: #36aa00;
+    
+}
+
+.table-container {
+    margin-left: 430px;
+    margin-top: 60px;
+    margin-right: 70px;
+  }
+  
+  table {
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: black;
+    font-weight: 400;
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 0 4px #333;
+  }
+  th {
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    padding: 15px;
+    font-weight: 500;
+    border-bottom: 2px solid white;
+  }
+  .title {
+    color: #007bff;
+    font-size: 24px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+  .title span {
     color: #000000;
-}
-.buyerDashboardContent a{
-    color: #222325;
-    text-decoration: none;
-}
-.buyerDashboardContent #content h2{ 
-    margin-bottom: 16px;
-}
-
-/*container 1*/
-.recentGigs .recentGigsContent{
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
-@media only screen and (min-width: 1200px) {
-    .buyerDashboardContent .searchBar{
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .buyerDashboardContent .personalizedHeader{
-        display: flex;
-        flex-direction: column;
-    }
-    .buyerDashboardContent .searchBar{
-        width: 100%;
-    }
-}
-
+    font-size: 17px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+  }
+  td {
+    font-weight: 500;
+    padding: 10px;
+    height: 10px;
+    background-color: rgb(250, 250, 250);
+    border-bottom: 2px solid white;
+  }
+  
+  tbody tr:nth-child(odd) {
+    background-color: #007bff;
+  }
+  
+  tbody tr:nth-child(odd) button {
+    background-color: #007bff;
+    border-color: white;
+  }
+  
+  .style {
+    color: white;
+    background-color: #007bff;
+    padding: 8px 20px 8px 20px;
+    border-radius: 6px;
+  }
+  
+  input[type="text"] {
+    border: none;
+    font-size: medium;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 10px;
+    background-color: rgb(243, 243, 243);
+    transition: ease-in-out 0.3s;
+    text-align: center;
+  }
+  
+  .deletebutton {
+    color: white;
+    background-color: #007bff;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    padding: 5px;
+    border-radius: 6px;
+    border: none;
+    transition: ease-in-out 0.2s;
+    box-shadow: 0 0 2px #333;
+  }
+  .deletebutton:hover {
+    background-color: white;
+    color: #007bff;
+  }
+  
