milestone ui updated

--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -271,6 +271,9 @@ body{
     justify-content: space-between;
     gap: 16px;
 }
+#milestoneModal .col{
+    width: 100%;
+}
 #inputContainer{
     min-height: 150px;
     border-radius: 8px;
