--- a/public/assests/css/HelpDeskCenter.styles.css
+++ b/public/assests/css/HelpDeskCenter.styles.css
@@ -256,4 +256,63 @@ li{
     background-color: white;
     color: #007bff;
   }
+
+  
+.content-table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    font-size: 0.9em;
+    min-width: 400px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    align-items: center;
+}
+
+.content-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+}
+
+.content-table th,
+.content-table td {
+    padding: 12px 15px;
+}
+
+.content-table th{
+    font-weight:bold ;
+    color: white;
+    background-color:#009879 ;
+
+}
+.content-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.content-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.content-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+.content-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+.heading{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-style: inherit;
+    text-align: center;
+    font-size: 30px;
+    color: #009879;
+
+}
+
+
   
