--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -180,7 +180,7 @@ body{
     background-color: #31d65a;
     cursor: pointer;
 }
-.modal .buttons button:hover{
+.milestoneModal .buttons button:hover, .modal .buttons button:hover{
     color: #333;
     background-color: rgb(241, 241, 241);
     font-weight: 600;
